--- a/Silverlight/Castle.Samples.WindsorSilverlight/Castle.Samples.WindsorSilverlight.csproj
+++ b/Silverlight/Castle.Samples.WindsorSilverlight/Castle.Samples.WindsorSilverlight.csproj
@@ -1,22 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AA5D0FCD-8441-4057-B2E3-B7D98EB129D4}</ProjectGuid>
     <ProjectTypeGuids>{A1591282-1198-4647-A2B1-27E5FF5F6F3B};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Castle.Samples.WindsorSilverlight</RootNamespace>
-    <AssemblyName>Castle.Samples.WindsorSilverlight</AssemblyName>
-    <TargetFrameworkIdentifier>Silverlight</TargetFrameworkIdentifier>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFramework>net48</TargetFramework>
     <SilverlightVersion>$(TargetFrameworkVersion)</SilverlightVersion>
     <SilverlightApplication>true</SilverlightApplication>
-    <SupportedCultures>
-    </SupportedCultures>
+    <SupportedCultures />
     <XapOutputs>true</XapOutputs>
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
     <XapFilename>Castle.Samples.WindsorSilverlight.xap</XapFilename>
@@ -29,36 +18,24 @@
     <OutOfBrowserSettingsFile>Properties\OutOfBrowserSettings.xml</OutOfBrowserSettingsFile>
     <UsePlatformExtensions>false</UsePlatformExtensions>
     <ThrowErrorsInValidation>true</ThrowErrorsInValidation>
-    <LinkedServerProject>
-    </LinkedServerProject>
-  </PropertyGroup>
-  <!-- This property group is only here to support building this project using the 
-       MSBuild 3.5 toolset. In order to work correctly with this older toolset, it needs 
-       to set the TargetFrameworkVersion to v3.5 -->
-  <PropertyGroup Condition="'$(MSBuildToolsVersion)' == '3.5'">
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>Bin\Debug</OutputPath>
-    <DefineConstants>DEBUG;TRACE;SILVERLIGHT</DefineConstants>
+    <LinkedServerProject />
+    <AssemblyTitle>Windsor.SLExample</AssemblyTitle>
+    <Product>Windsor.SLExample</Product>
+    <Copyright>Copyright ©  2010</Copyright>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugType>full</DebugType>
+    <OutputPath>Bin\Debug</OutputPath>
+    <DefineConstants>DEBUG;TRACE;SILVERLIGHT</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
     <OutputPath>Bin\Release</OutputPath>
     <DefineConstants>TRACE;SILVERLIGHT</DefineConstants>
-    <NoStdLib>true</NoStdLib>
-    <NoConfig>true</NoConfig>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
   <ItemGroup>
     <Reference Include="Castle.Core">
       <HintPath>..\..\Lib\Castle.Core.dll</HintPath>
@@ -72,63 +49,28 @@
     <Reference Include="mscorlib" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Windows.Controls, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Controls.Data, Version=2.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
-    <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App.xaml.cs">
+    <Compile Update="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Commands\DeleteAllCommand.cs" />
-    <Compile Include="Commands\LoginCommand.cs" />
-    <Compile Include="Commands\LogoutCommand.cs" />
-    <Compile Include="Commands\ShowCommand.cs" />
-    <Compile Include="Commands\SaveCustomerCommand.cs" />
-    <Compile Include="Factories\CustomerFactory.cs" />
-    <Compile Include="Factories\IModelFactory.cs" />
-    <Compile Include="Installers\AuthorizationInstaller.cs" />
-    <Compile Include="Installers\BehaviorInstaller.cs" />
-    <Compile Include="Installers\CommandInstaller.cs" />
-    <Compile Include="Installers\ModelInstaller.cs" />
-    <Compile Include="Installers\ServiceInstaller.cs" />
-    <Compile Include="Installers\ValidatorInstaller.cs" />
-    <Compile Include="Installers\ViewInstaller.cs" />
-    <Compile Include="Interceptors\AuthorizationBehavior.cs" />
-    <Compile Include="Interceptors\DataErrorInfoBehavior.cs" />
-    <Compile Include="Interceptors\EditableBehavior.cs" />
-    <Compile Include="Interceptors\NotifyPropertyChangedBehavior.cs" />
-    <Compile Include="Model\Customer.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Security\AppIdentity.cs" />
-    <Compile Include="Security\AppPrincipal.cs" />
-    <Compile Include="Security\AuthorizationManager.cs" />
-    <Compile Include="Security\AuthorizeAttribute.cs" />
-    <Compile Include="Security\IAuthenticationManager.cs" />
-    <Compile Include="Security\IAuthorizationManager.cs" />
-    <Compile Include="Services\ICustomerRepository.cs" />
-    <Compile Include="Services\Impl\CustomerRepository.cs" />
-    <Compile Include="Services\IRepository.cs" />
-    <Compile Include="Services\IStatusService.cs" />
-    <Compile Include="Startup\GuyWire.cs" />
-    <Compile Include="TypeSelector\FluentValidatorServiceSelector.cs" />
-    <Compile Include="Validators\CustomerValidator.cs" />
-    <Compile Include="Views\AuthorizationView.xaml.cs">
+    <Compile Update="Views\AuthorizationView.xaml.cs">
       <DependentUpon>AuthorizationView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\EditCustomerView.xaml.cs">
+    <Compile Update="Views\EditCustomerView.xaml.cs">
       <DependentUpon>EditCustomerView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\MainView.xaml.cs">
+    <Compile Update="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\CustomersView.xaml.cs">
+    <Compile Update="Views\CustomersView.xaml.cs">
       <DependentUpon>CustomersView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\NewCustomerView.xaml.cs">
+    <Compile Update="Views\NewCustomerView.xaml.cs">
       <DependentUpon>NewCustomerView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -164,20 +106,4 @@
   <ItemGroup>
     <None Include="Properties\OutOfBrowserSettings.xml" />
   </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <ProjectExtensions>
-    <VisualStudio>
-      <FlavorProperties GUID="{A1591282-1198-4647-A2B1-27E5FF5F6F3B}">
-        <SilverlightProjectProperties />
-      </FlavorProperties>
-    </VisualStudio>
-  </ProjectExtensions>
 </Project>
